# react-rust-web

./: .dockerignore  Dockerfile  README.md
backend-rust/: Cargo.toml
backend-rust/src/: api.rs  assets.rs  main.rs  route.rs
backend-rust/src/custom_marcos/: Cargo.toml
backend-rust/src/custom_marcos/src/: lib.rs
frontend-react/: bun.lockb  package.json
frontend-react/src/: App.tsx  TableExample.tsx
