workspace = { members = ["src/custom_marcos"] }
[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
mime = "0.3.17"
rust-embed = "8.3.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
url = "2.5.0"
custom_marcos = { path = "src/custom_marcos" }
